# src_flag

./: .FLAG_Python_Documentation.rst  CMakeLists.txt  MANIFEST.in  README  README.rst  conanfile.py  conanfile.txt  makefile  pyproject.toml  setup.py
.github/workflows/: cpp.yml  python.yml
cmake/: FlagConfig.in.cmake  FlagConfigVersion.in.cmake  exporting.cmake
include/: flag.h  flag_core.h  flag_sampling.h  flag_spherbessel.h  flag_spherlaguerre.h  flag_types.h  flag_version.in.h
src/main/c/: CMakeLists.txt  flag_about.c  flag_core.c  flag_sampling.c  flag_spherbessel.c  flag_spherlaguerre.c
src/main/pyflag/: .FLAG_Python_Documentation.rst  CMakeLists.txt  README.rst  bindings.pyx
src/test/c/: CMakeLists.txt  test_flag.c  test_flag_fb.c
src/test/pyflag/: test_pyflag.py
